nginx/nginxsvc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: my-nginx
  labels:
    run: my-nginx
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    run: my-nginx
  type: NodePort
